height on mobile view fix

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .App {
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - calc(100vh - 100%));
     display: flex;
     align-items: center;
     justify-content: center;
